# Arm-mali-gpu-playground

./: .gitignore  CMakeLists.txt  Vec3.h  local.properties  prac  prac.cpp  settings.gradle.kts  vecTest
app/: CMakeLists.txt  build.gradle.kts
app/src/: main.cpp
app/src/androidTest/java/com/example/arm_demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/arm_demo/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/arm_demo/: ExampleUnitTest.kt
driver/: CMakeLists.txt
driver/include/: MaliDriverAPI.h
driver/src/: MaliDriverAPI.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ringBuf/: shm_ring_buffer.c
vec/: Vec3.h  Vec3Ops.cpp  main.cpp
